--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
+    "lodash.get": "^4.4.2",
     "netlify-cms": "^2.3.3",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
